emptyDir.yaml
apiVersion: v1
kind: Pod
metadata:
    name: test-pod
spec:
  containers:
     - image: lipun1/prasad:latest
       name: lipun11
       ports:
        - containerPort: 8081
          name: http
          protocol: TCP
  volumes:
    - name: cache-dir
      emptyDir: {}
