envConfig.yaml
apiVersion: v1
kind: Pod
metadata: 
    name: lkpod
spec:
  containers:
    - image: lipun1/prasad:latest
      name: lipu
      ports: 
       - containerPort: 8081
         name: http
         protocol: TCP
