mysqlstatepod.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata: 
    name: mysql
    labels:
     name: mysql-db
spec:
   replicas: 3
   selector:
     matchLabels:
        app: mysqldb
   templates:
     metadata:
       labels:
          app: mysqldb
     spec:
       containers:
         - name: mysqlapp
           image: mysql:5.7
           ports:
            - containerPort: 3306
              name: mysqldb
           volumeMounts:
            - name: db
              mountPath: /var/lib/mysql
          
   volumeClaimTemplates:
    - metadata:
        name: db
        spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: mysqlvol
        resources:
          requests:
            stoarge: 300Mi
