nfs-provisoner.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: nfs-server-provisioner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nfs-server-provisioner
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nfs-server-provisioner
    spec:
      serviceAccountName: nfs-server-provisioner
      containers:
        - name: nfs-client-provisioner
          image: k8s.gcr.io/sig-storage/nfs-subdir-external-provisioner:v4.0.2 #quay.io/external_storage/nfs-client-provisioner:latest
          volumeMounts:
            - name: nfs-server
              mountPath: /persistentvolumes
      volumes:
        - name: nfs-server
          nfs:
            server: 192.168.10.14
            path: /var/nfs/backup
