nfspod.yaml
apiVersion: v1
kind: Pod
metadata:
    name: hello-nginx-nfs-pod
    labels:
      name: hello-nginx-nfs-pod
spec:
  containers:
    - name: hello-nginx-nfs-pods
      image: nginx:latest
      ports:
        - containerPort: 80
          name: http
          protocol: TCP
      volumeMounts:
        - name: nfsvol
          mountPath: /usr/share/nginx/html
  volumes:
    - name: nfsvol
      persistentVolumeClaim:
         claimName: nfs-pvc
