nginx-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: ngnix-deployment
    labels:
      app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      templateName: temp-nginx
  template:
    metadata:
      labels:
         templateName: temp-nginx
   spec: 
    containers:
     - name: containerWritingData
       image: alpine
       command: ["/bin/sh"]
       args: ["-c","while true;do date" >> /var/log/index.html;sleep 10;done"]
       volumeMounts:
       - name: shared-date-logs  
         mountPath: /var/log
     - name: container-serving-dates
       image: nginx:1.19.0
       ports:
        - containerPort: 80
       volumeMounts:
         - name: shared-date-logs  
           mountPath: /usr/share/nginx/html
    volumes:
      - name: shared-date-logs  
        emptyDir: {}
