mysqlstatefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-server
  labels:
    app: mysqldb
spec:
  ports:
  - port: 3306
    targetPort: 3306
    name: db
  clusterIP: None
  selector:
    db: mysql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      db: mysql # has to match .spec.template.metadata.labels
  serviceName: "mysql-server"
  #podManagementPolicy: Parallel #(default: Ordered)
  replicas: 3 # by default is 1
  template:
    metadata:
      labels:
        db: mysql # has to match .spec.selector.matchLabels
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: mysql
        image: mysql:5.7
        ports:
        - containerPort: 3306
          name: db
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/mysql
        livenessProbe:
          exec:
            command: ["mysqladmin", "ping"]
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          exec:
            # Check we can execute queries over TCP (skip-networking is off).
            command: ["mysql", "-h", "$(MY_POD_IP)", "-e", "SELECT 1"]
          initialDelaySeconds: 5
          periodSeconds: 2
          timeoutSeconds: 1
  volumeClaimTemplates:
  - metadata:
      name: db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: manual
      resources:
        requests:
          storage: 1Gi
