ingress-rule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: sudheerdevops-ingress
    annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: app1.sudheerdevops.tld
    http:
      paths:
        - path: /app1
          pathType: Prefix
          backend:
            service:
               name: app1-nginx
               port: 
                 number: 80
  - host: app2.sudheerdevops.tld
    http:
      paths:
       - path: /app2
         pathType: Prefix
         backend: 
           service:
              name: app2-nginx
              port:  
                 number: 80
